# spidar_mouse_server

./: Cargo.toml  README.md  build.bat  build.rs  run.bat
src/: main.rs
src/spidar_mouse/: messages.rs  mod.rs  post.rs  wrapper.rs  ws.rs
src/static/: index.html  post.js  spidarClasses.js  ws.html  ws.js
